--- a/student.ipynb
+++ b/student.ipynb
@@ -7,11 +7,11 @@
     "## Final Project Submission\n",
     "\n",
     "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "* Student name: Brian Kiptoo\n",
+    "* Student pace: full time\n",
+    "* Scheduled project review date/time: N/A\n",
+    "* Instructor name: Nikita Njoroge\n",
+    "* Blog post URL: N/A\n"
    ]
   },
   {
