--- a/student.ipynb
+++ b/student.ipynb
@@ -15,8 +15,419 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Film Industry Analysis for Microsoft Movie Studio\n",
+    "\n",
+    "Business Problem\n",
+    "\n",
+    "Microsoft sees all the big companies creating original video content and they want to get in on the fun. They have decided to create a new movie studio, but they don’t know anything about creating movies. You are charged with exploring what types of films are currently doing the best at the box office. You must then translate those findings into actionable insights that the head of Microsoft's new movie studio can use to help decide what type of films to create.\n",
+    "\n",
+    "Objectives\n",
+    "\n",
+    "1. Research current film trends and analyze box office success of various movie genres.\n",
+    "2. Identify the most profitable and popular movie genres in the market.\n",
+    "3. Develop a list of recommendations for Microsoft's new movie studio based on the research findings.\n",
+    "4. Present a comprehensive report of the research findings and recommendations to the head of the new movie studio.\n",
+    "\n",
+    "Importing Libraries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import sqlite3\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "conn = sqlite3.connect('zippedData/im.db.zip')\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data\n",
+    "The datasets are stored in the 'zippedData' folder and were sourced from:\n",
+    "\n",
+    "1. Box Office MojoLinks\n",
+    "    > bom.movie_gross.csv\n",
+    "2. IMDBLinks\n",
+    "    > im.db\n",
+    "3. Rotten TomatoesLinks\n",
+    "    > rt.movie_info.tsv\n",
+    "4. TheMovieDBLinks\n",
+    "    > tmdb.movies.csv\n",
+    "5. The Numbers\n",
+    "    > tn.movie_budget.csv\n",
+    "\n",
+    "Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>studio</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>foreign_gross</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>415000000.0</td>\n",
+       "      <td>652000000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alice in Wonderland (2010)</td>\n",
+       "      <td>BV</td>\n",
+       "      <td>334200000.0</td>\n",
+       "      <td>691300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Harry Potter and the Deathly Hallows Part 1</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>296000000.0</td>\n",
+       "      <td>664300000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Inception</td>\n",
+       "      <td>WB</td>\n",
+       "      <td>292600000.0</td>\n",
+       "      <td>535700000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Shrek Forever After</td>\n",
+       "      <td>P/DW</td>\n",
+       "      <td>238700000.0</td>\n",
+       "      <td>513900000</td>\n",
+       "      <td>2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3382</th>\n",
+       "      <td>The Quake</td>\n",
+       "      <td>Magn.</td>\n",
+       "      <td>6200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3383</th>\n",
+       "      <td>Edward II (2018 re-release)</td>\n",
+       "      <td>FM</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3384</th>\n",
+       "      <td>El Pacto</td>\n",
+       "      <td>Sony</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3385</th>\n",
+       "      <td>The Swan</td>\n",
+       "      <td>Synergetic</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3386</th>\n",
+       "      <td>An Actor Prepares</td>\n",
+       "      <td>Grav.</td>\n",
+       "      <td>1700.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3387 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            title      studio  domestic_gross  \\\n",
+       "0                                     Toy Story 3          BV     415000000.0   \n",
+       "1                      Alice in Wonderland (2010)          BV     334200000.0   \n",
+       "2     Harry Potter and the Deathly Hallows Part 1          WB     296000000.0   \n",
+       "3                                       Inception          WB     292600000.0   \n",
+       "4                             Shrek Forever After        P/DW     238700000.0   \n",
+       "...                                           ...         ...             ...   \n",
+       "3382                                    The Quake       Magn.          6200.0   \n",
+       "3383                  Edward II (2018 re-release)          FM          4800.0   \n",
+       "3384                                     El Pacto        Sony          2500.0   \n",
+       "3385                                     The Swan  Synergetic          2400.0   \n",
+       "3386                            An Actor Prepares       Grav.          1700.0   \n",
+       "\n",
+       "     foreign_gross  year  \n",
+       "0        652000000  2010  \n",
+       "1        691300000  2010  \n",
+       "2        664300000  2010  \n",
+       "3        535700000  2010  \n",
+       "4        513900000  2010  \n",
+       "...            ...   ...  \n",
+       "3382           NaN  2018  \n",
+       "3383           NaN  2018  \n",
+       "3384           NaN  2018  \n",
+       "3385           NaN  2018  \n",
+       "3386           NaN  2018  \n",
+       "\n",
+       "[3387 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#load data from Box Office MojoLinks\n",
+    "movies_gross = pd.read_csv('zippedData/bom.movie_gross.csv.gz')\n",
+    "movies_gross"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>production_budget</th>\n",
+       "      <th>domestic_gross</th>\n",
+       "      <th>worldwide_gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dec 18, 2009</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>$425,000,000</td>\n",
+       "      <td>$760,507,625</td>\n",
+       "      <td>$2,776,345,279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>May 20, 2011</td>\n",
+       "      <td>Pirates of the Caribbean: On Stranger Tides</td>\n",
+       "      <td>$410,600,000</td>\n",
+       "      <td>$241,063,875</td>\n",
+       "      <td>$1,045,663,875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jun 7, 2019</td>\n",
+       "      <td>Dark Phoenix</td>\n",
+       "      <td>$350,000,000</td>\n",
+       "      <td>$42,762,350</td>\n",
+       "      <td>$149,762,350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>May 1, 2015</td>\n",
+       "      <td>Avengers: Age of Ultron</td>\n",
+       "      <td>$330,600,000</td>\n",
+       "      <td>$459,005,868</td>\n",
+       "      <td>$1,403,013,963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Dec 15, 2017</td>\n",
+       "      <td>Star Wars Ep. VIII: The Last Jedi</td>\n",
+       "      <td>$317,000,000</td>\n",
+       "      <td>$620,181,382</td>\n",
+       "      <td>$1,316,721,747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5777</th>\n",
+       "      <td>78</td>\n",
+       "      <td>Dec 31, 2018</td>\n",
+       "      <td>Red 11</td>\n",
+       "      <td>$7,000</td>\n",
+       "      <td>$0</td>\n",
+       "      <td>$0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5778</th>\n",
+       "      <td>79</td>\n",
+       "      <td>Apr 2, 1999</td>\n",
+       "      <td>Following</td>\n",
+       "      <td>$6,000</td>\n",
+       "      <td>$48,482</td>\n",
+       "      <td>$240,495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5779</th>\n",
+       "      <td>80</td>\n",
+       "      <td>Jul 13, 2005</td>\n",
+       "      <td>Return to the Land of Wonders</td>\n",
+       "      <td>$5,000</td>\n",
+       "      <td>$1,338</td>\n",
+       "      <td>$1,338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5780</th>\n",
+       "      <td>81</td>\n",
+       "      <td>Sep 29, 2015</td>\n",
+       "      <td>A Plague So Pleasant</td>\n",
+       "      <td>$1,400</td>\n",
+       "      <td>$0</td>\n",
+       "      <td>$0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5781</th>\n",
+       "      <td>82</td>\n",
+       "      <td>Aug 5, 2005</td>\n",
+       "      <td>My Date With Drew</td>\n",
+       "      <td>$1,100</td>\n",
+       "      <td>$181,041</td>\n",
+       "      <td>$181,041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5782 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id  release_date                                        movie  \\\n",
+       "0      1  Dec 18, 2009                                       Avatar   \n",
+       "1      2  May 20, 2011  Pirates of the Caribbean: On Stranger Tides   \n",
+       "2      3   Jun 7, 2019                                 Dark Phoenix   \n",
+       "3      4   May 1, 2015                      Avengers: Age of Ultron   \n",
+       "4      5  Dec 15, 2017            Star Wars Ep. VIII: The Last Jedi   \n",
+       "...   ..           ...                                          ...   \n",
+       "5777  78  Dec 31, 2018                                       Red 11   \n",
+       "5778  79   Apr 2, 1999                                    Following   \n",
+       "5779  80  Jul 13, 2005                Return to the Land of Wonders   \n",
+       "5780  81  Sep 29, 2015                         A Plague So Pleasant   \n",
+       "5781  82   Aug 5, 2005                            My Date With Drew   \n",
+       "\n",
+       "     production_budget domestic_gross worldwide_gross  \n",
+       "0         $425,000,000   $760,507,625  $2,776,345,279  \n",
+       "1         $410,600,000   $241,063,875  $1,045,663,875  \n",
+       "2         $350,000,000    $42,762,350    $149,762,350  \n",
+       "3         $330,600,000   $459,005,868  $1,403,013,963  \n",
+       "4         $317,000,000   $620,181,382  $1,316,721,747  \n",
+       "...                ...            ...             ...  \n",
+       "5777            $7,000             $0              $0  \n",
+       "5778            $6,000        $48,482        $240,495  \n",
+       "5779            $5,000         $1,338          $1,338  \n",
+       "5780            $1,400             $0              $0  \n",
+       "5781            $1,100       $181,041        $181,041  \n",
+       "\n",
+       "[5782 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Load the data from tn.movie_budgets.csv into a dataframe\n",
+    "movies_budget = pd.read_csv('zippedData/tn.movie_budgets.csv.gz')\n",
+    "movies_budget"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
