--- a/student.ipynb
+++ b/student.ipynb
@@ -6857,7 +6857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -6880,7 +6880,8 @@
     "plt.ylabel('Revenue')\n",
     "plt.title('Plot of Bugdet against Revenue')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig('Budget against Revenue.png');"
    ]
   },
   {
