--- a/student.ipynb
+++ b/student.ipynb
@@ -6857,7 +6857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -6880,8 +6880,7 @@
     "plt.ylabel('Revenue')\n",
     "plt.title('Plot of Bugdet against Revenue')\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "fig.savefig('Budget against Revenue.png');"
+    "plt.show()\n"
    ]
   },
   {
