--- a/student.ipynb
+++ b/student.ipynb
@@ -4332,7 +4332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -4476,201 +4476,48 @@
        "      <td>164.0</td>\n",
        "      <td>Drama,Mystery,Sci-Fi</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>552</th>\n",
-       "      <td>89</td>\n",
-       "      <td>Jun 1, 2018</td>\n",
-       "      <td>Adrift</td>\n",
-       "      <td>35000000.0</td>\n",
-       "      <td>31445011.0</td>\n",
-       "      <td>5.789719e+07</td>\n",
-       "      <td>STX</td>\n",
-       "      <td>28500000.0</td>\n",
-       "      <td>[99]</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>tt6306064</td>\n",
-       "      <td>Adrift</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>Action,Adventure,Biography</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>551</th>\n",
-       "      <td>89</td>\n",
-       "      <td>Jun 1, 2018</td>\n",
-       "      <td>Adrift</td>\n",
-       "      <td>35000000.0</td>\n",
-       "      <td>31445011.0</td>\n",
-       "      <td>5.789719e+07</td>\n",
-       "      <td>STX</td>\n",
-       "      <td>28500000.0</td>\n",
-       "      <td>[99]</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>tt4608626</td>\n",
-       "      <td>Adrift</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1194</th>\n",
-       "      <td>76</td>\n",
-       "      <td>Feb 27, 2015</td>\n",
-       "      <td>The Lazarus Effect</td>\n",
-       "      <td>5000000.0</td>\n",
-       "      <td>25801570.0</td>\n",
-       "      <td>3.835931e+07</td>\n",
-       "      <td>Rela.</td>\n",
-       "      <td>12600000.0</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>3</td>\n",
-       "      <td>tt2918436</td>\n",
-       "      <td>The Lazarus Effect</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>Horror,Mystery,Sci-Fi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1291</th>\n",
-       "      <td>34</td>\n",
-       "      <td>May 8, 2015</td>\n",
-       "      <td>The D Train</td>\n",
-       "      <td>3000000.0</td>\n",
-       "      <td>669688.0</td>\n",
-       "      <td>7.723660e+05</td>\n",
-       "      <td>IFC</td>\n",
-       "      <td>102000.0</td>\n",
-       "      <td>[18, 10751]</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>tt2690138</td>\n",
-       "      <td>The D Train</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>Comedy,Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>398</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Apr 8, 2011</td>\n",
-       "      <td>Your Highness</td>\n",
-       "      <td>50000000.0</td>\n",
-       "      <td>21596445.0</td>\n",
-       "      <td>2.612164e+07</td>\n",
-       "      <td>Uni.</td>\n",
-       "      <td>3300000.0</td>\n",
-       "      <td>[14, 18, 28, 35, 878]</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>tt1240982</td>\n",
-       "      <td>Your Highness</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>Adventure,Comedy,Fantasy</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1396 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id_x release_date_x                                      movie  \\\n",
-       "2        7   Apr 27, 2018                     Avengers: Infinity War   \n",
-       "624      6   Oct 24, 2014                                  John Wick   \n",
-       "14      22   Dec 17, 2014  The Hobbit: The Battle of the Five Armies   \n",
-       "70      14    Aug 1, 2014                    Guardians of the Galaxy   \n",
-       "47      80    Oct 6, 2017                          Blade Runner 2049   \n",
-       "...    ...            ...                                        ...   \n",
-       "552     89    Jun 1, 2018                                     Adrift   \n",
-       "551     89    Jun 1, 2018                                     Adrift   \n",
-       "1194    76   Feb 27, 2015                         The Lazarus Effect   \n",
-       "1291    34    May 8, 2015                                The D Train   \n",
-       "398     78    Apr 8, 2011                              Your Highness   \n",
+       "     id_x release_date_x                                      movie  \\\n",
+       "2       7   Apr 27, 2018                     Avengers: Infinity War   \n",
+       "624     6   Oct 24, 2014                                  John Wick   \n",
+       "14     22   Dec 17, 2014  The Hobbit: The Battle of the Five Armies   \n",
+       "70     14    Aug 1, 2014                    Guardians of the Galaxy   \n",
+       "47     80    Oct 6, 2017                          Blade Runner 2049   \n",
        "\n",
-       "      production_budget  domestic_gross_x  worldwide_gross   studio  \\\n",
-       "2           300000000.0       678815482.0     2.048134e+09       BV   \n",
-       "624          30000000.0        43037835.0     7.623500e+07     LG/S   \n",
-       "14          250000000.0       255119788.0     9.455776e+08  WB (NL)   \n",
-       "70          170000000.0       333172112.0     7.708675e+08       BV   \n",
-       "47          185000000.0        92054159.0     2.593574e+08       WB   \n",
-       "...                 ...               ...              ...      ...   \n",
-       "552          35000000.0        31445011.0     5.789719e+07      STX   \n",
-       "551          35000000.0        31445011.0     5.789719e+07      STX   \n",
-       "1194          5000000.0        25801570.0     3.835931e+07    Rela.   \n",
-       "1291          3000000.0          669688.0     7.723660e+05      IFC   \n",
-       "398          50000000.0        21596445.0     2.612164e+07     Uni.   \n",
+       "     production_budget  domestic_gross_x  worldwide_gross   studio  \\\n",
+       "2          300000000.0       678815482.0     2.048134e+09       BV   \n",
+       "624         30000000.0        43037835.0     7.623500e+07     LG/S   \n",
+       "14         250000000.0       255119788.0     9.455776e+08  WB (NL)   \n",
+       "70         170000000.0       333172112.0     7.708675e+08       BV   \n",
+       "47         185000000.0        92054159.0     2.593574e+08       WB   \n",
        "\n",
-       "      foreign_gross              genre_ids  popularity  vote_average  \\\n",
-       "2            1369.5           [12, 28, 14]      80.773           8.3   \n",
-       "624      45700000.0               [28, 53]      78.123           7.2   \n",
-       "14      700900000.0           [28, 12, 14]      53.783           7.3   \n",
-       "70      440200000.0          [28, 878, 12]      49.606           7.9   \n",
-       "47      167200000.0          [878, 28, 53]      48.571           7.4   \n",
-       "...             ...                    ...         ...           ...   \n",
-       "552      28500000.0                   [99]       0.600           7.0   \n",
-       "551      28500000.0                   [99]       0.600           7.0   \n",
-       "1194     12600000.0                     []       0.600           4.8   \n",
-       "1291       102000.0            [18, 10751]       0.600           6.0   \n",
-       "398       3300000.0  [14, 18, 28, 35, 878]       0.600           3.0   \n",
+       "     foreign_gross      genre_ids  popularity  vote_average  vote_count  \\\n",
+       "2           1369.5   [12, 28, 14]      80.773           8.3       13948   \n",
+       "624     45700000.0       [28, 53]      78.123           7.2       10081   \n",
+       "14     700900000.0   [28, 12, 14]      53.783           7.3        8392   \n",
+       "70     440200000.0  [28, 878, 12]      49.606           7.9       17958   \n",
+       "47     167200000.0  [878, 28, 53]      48.571           7.4        6679   \n",
        "\n",
-       "      vote_count   movie_id                              primary_title  \\\n",
-       "2          13948  tt4154756                     Avengers: Infinity War   \n",
-       "624        10081  tt2911666                                  John Wick   \n",
-       "14          8392  tt2310332  The Hobbit: The Battle of the Five Armies   \n",
-       "70         17958  tt2015381                    Guardians of the Galaxy   \n",
-       "47          6679  tt1856101                          Blade Runner 2049   \n",
-       "...          ...        ...                                        ...   \n",
-       "552            1  tt6306064                                     Adrift   \n",
-       "551            1  tt4608626                                     Adrift   \n",
-       "1194           3  tt2918436                         The Lazarus Effect   \n",
-       "1291           2  tt2690138                                The D Train   \n",
-       "398            4  tt1240982                              Your Highness   \n",
+       "      movie_id                              primary_title  start_year  \\\n",
+       "2    tt4154756                     Avengers: Infinity War        2018   \n",
+       "624  tt2911666                                  John Wick        2014   \n",
+       "14   tt2310332  The Hobbit: The Battle of the Five Armies        2014   \n",
+       "70   tt2015381                    Guardians of the Galaxy        2014   \n",
+       "47   tt1856101                          Blade Runner 2049        2017   \n",
        "\n",
-       "      start_year  runtime_minutes                      genres  \n",
-       "2           2018            149.0     Action,Adventure,Sci-Fi  \n",
-       "624         2014            101.0       Action,Crime,Thriller  \n",
-       "14          2014            144.0           Adventure,Fantasy  \n",
-       "70          2014            121.0     Action,Adventure,Comedy  \n",
-       "47          2017            164.0        Drama,Mystery,Sci-Fi  \n",
-       "...          ...              ...                         ...  \n",
-       "552         2018             96.0  Action,Adventure,Biography  \n",
-       "551         2015             85.0                     Romance  \n",
-       "1194        2015             83.0       Horror,Mystery,Sci-Fi  \n",
-       "1291        2015            101.0                Comedy,Drama  \n",
-       "398         2011            102.0    Adventure,Comedy,Fantasy  \n",
-       "\n",
-       "[1396 rows x 17 columns]"
+       "     runtime_minutes                   genres  \n",
+       "2              149.0  Action,Adventure,Sci-Fi  \n",
+       "624            101.0    Action,Crime,Thriller  \n",
+       "14             144.0        Adventure,Fantasy  \n",
+       "70             121.0  Action,Adventure,Comedy  \n",
+       "47             164.0     Drama,Mystery,Sci-Fi  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4678,7 +4525,7 @@
    "source": [
     "# find the popular genre\n",
     "popular = final_df.sort_values('popularity', ascending = False)\n",
-    "popular"
+    "popular.head()"
    ]
   },
   {
