--- a/student.ipynb
+++ b/student.ipynb
@@ -6835,10 +6835,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Recommendations.\n",
+    "\n",
+    "1. Microsoft Office Studio should focus producing movies on genres with high popularity; Drama,Comedy,Action and Adventure as popular movies generate a high revenue.\n",
+    "\n",
+    "2. Microsoft Office Studio should spend well,have a high budget, for movies production since the data shows that movies with high budgets tend to generate high revenue.\n",
+    "    \n",
+    "3. Microsoft Office Studion should produce movies which are not too long, approximately 90 to 150 minutes, since these kinds of movies tend to have a higher rating as seen in the data above and movies with high ratings generate high revenue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
