--- a/student.ipynb
+++ b/student.ipynb
@@ -6662,7 +6662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -6681,8 +6681,7 @@
     "\n",
     "plt.figure(figsize=(12,10))\n",
     "sns.barplot(x=genre,y=count,color='green')\n",
-    "\n",
-    "\n",
+    "# add titles \n",
     "plt.title('Genre Vs Popularity')\n",
     "plt.xlabel(\"Movie Genre\")\n",
     "plt.ylabel(\"Count\")\n",
