--- a/student.ipynb
+++ b/student.ipynb
@@ -18,9 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Film Industry Analysis for Microsoft Movie Studio\n",
+    "# Film Industry Analysis for Microsoft Movie Studio\n",
     "\n",
-    "Business Problem\n",
+    "# Business Problem\n",
     "\n",
     "Microsoft sees all the big companies creating original video content and they want to get in on the fun. They have decided to create a new movie studio, but they don’t know anything about creating movies. You are charged with exploring what types of films are currently doing the best at the box office. You must then translate those findings into actionable insights that the head of Microsoft's new movie studio can use to help decide what type of films to create.\n",
     "\n",
@@ -35,7 +35,7 @@
     "d. Present a comprehensive report of the research findings and recommendations to the head of the new movie studio.\n",
     "\n",
     "\n",
-    "1. Importing Libraries."
+    "# 1. Importing Libraries."
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Loading Data from Datasets"
+    "# 2. Loading Data from Datasets"
    ]
   },
   {
@@ -1293,9 +1293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Cleaning Data\n",
+    "# 3. Cleaning Data\n",
     "\n",
-    "3.1 We will now clean data from Box Office Mojo"
+    "# 3.1 We will now clean data from Box Office Mojo"
    ]
   },
   {
@@ -1768,7 +1768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.2 Cleaning data from The Numbers"
+    "# 3.2 Cleaning data from The Numbers"
    ]
   },
   {
@@ -2239,7 +2239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.3 Cleaning data from TheMovieDB Links"
+    "# 3.3 Cleaning data from TheMovieDB Links"
    ]
   },
   {
@@ -2553,7 +2553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.4 Cleaning data from reviews"
+    "# 3.4 Cleaning data from reviews"
    ]
   },
   {
@@ -2775,7 +2775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.5 Cleaning data from Rotten Tomatoes Links"
+    "# 3.5 Cleaning data from Rotten Tomatoes Links"
    ]
   },
   {
@@ -3079,7 +3079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3.6 Cleaning data from IMDB Links"
+    "# 3.6 Cleaning data from IMDB Links"
    ]
   },
   {
@@ -3534,7 +3534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merging tmd dataframe with the movie_basics table"
+    "# Merging tmd dataframe with the movie_basics table"
    ]
   },
   {
@@ -4131,7 +4131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Exploratory Data Analysis\n"
+    "# 5. Exploratory Data Analysis\n"
    ]
   },
   {
@@ -6657,7 +6657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Data Visualization"
+    "# 6. Data Visualization"
    ]
   },
   {
@@ -6834,7 +6834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recommendations.\n",
+    "# Recommendations.\n",
     "\n",
     "1. Microsoft Office Studio should focus producing movies on genres with high popularity; Drama,Comedy,Action and Adventure as popular movies generate a high revenue.\n",
     "\n",
@@ -6842,6 +6842,11 @@
     "    \n",
     "3. Microsoft Office Studion should produce movies which are not too long, approximately 90 to 150 minutes, since these kinds of movies tend to have a higher rating as seen in the data above and movies with high ratings generate high revenue."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
